# nsf-viz

./: .eslintrc.json  .gitignore  README.md  api.json  app.py  build_model.py  docker-compose-prod.yaml  docker-compose.yaml  elastic.py  elasticsearch.yml  gen_ngrams.py  gunicorn.py  nsf_mapping.py  orval.config.js  package.json  tsconfig.json  wsgi.py
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile-prod  analyze.py  api.json  app.py  models.py  pyproject.toml  queries.py  requirements-poetryexport.txt  requirements.txt
backend/assets/: README.md  dod_directory.json  nih_directory.json  nsf_directory.json
backend/es/: README.md  associated.json  build_model.py  elastic.py  gen_keys.py  index.py  index_grants.py  index_suggester.py  ingest_data.py  mapping.py
backend/ingest_data/: README.md  abbreviations.json  build_model.py  division_abbreviations.json  index_grants.py  index_suggester.py  ingest.py  mapped.json  normalized_division_names.json  parse_abbrevs.py  unmapped.json
dataloader/: .gitignore  pyproject.toml
dataloader/dataloader/: core.py  download.py  parsers.py
frontend/: .dockerignore  .eslintignore  .eslintrc.json  Dockerfile  Dockerfile-prod  api.json  orval.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/scripts/: generateAPI.js  generateAPI.mjs
frontend/src/: App.tsx  api.ts  index.css  index.tsx  theme.tsx
frontend/src/api/: index.ts
frontend/src/app/: Highlight.tsx  actions.ts  dataReducer.ts  (+8 more)
proxy/: Dockerfile  local.conf  prod.conf
src/: App.tsx  index.tsx  types.d.tsx
src/app/: actions.js  actions.ts  dataReducer.ts  filterReducer.ts  reducers.js  selectors.ts  store.js  store.ts  types.ts
static/: divisions.csv  index.css  index.js
templates/: index.html  index2.html  index_old.html
ui/: .dockerignore  Dockerfile  package.json
(+75 files in other folders)
