[tool.poetry]
name = "nsf-viz-dataloader"
version = "0.1.0"
description = "Load data into elasticsearch for nsf-viz (grantexplorer)"
authors = ["Jason Portenoy"]
packages = [
	{ include = "dataloader" },
]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "<8.0"
elasticsearch-dsl = "^7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "<1.4"
black = "^22.3.0"
pylint = "^2.13.7"
humanfriendly = "^10.0"
eland = "7.14.1b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
